# TapRush

./: .gitignore  CMakeLists.txt  README.md  TapRush.html
include/: Button.h  Game.h
src/: Achievements.cpp  Button.cpp  Game.cpp  main.cpp
